Implementing some account routes
