# openapi.yaml
@@ -617,6 +617,12 @@ components:
         message:
           type: string
           example: Invalid request
+        details:
+          type: string
+          example: Error details
+        exception:
+          type: string
+          example: HttpMessageNotReadableException
     UnauthorizedErrorResponse:
       type: object
       properties:
@@ -626,6 +632,12 @@ components:
         message:
           type: string
           example: Missing access token in request
+        details:
+          type: string
+          example: Error details
+        exception:
+          type: string
+          example: HttpMessageNotReadableException
     LoginErrorResponse:
       type: object
       properties:
@@ -635,6 +647,12 @@ components:
         message:
           type: string
           example: Invalid account number or password
+        details:
+          type: string
+          example: Error details
+        exception:
+          type: string
+          example: HttpMessageNotReadableException
   securitySchemes:
     BearerAuth:
       type: http
